<resources>
    <string name="app_name">ToDoApp</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_task_list">TaskList</string>

    <string name="action_new_task">New Task</string>
    <string name="action_delete_all_tasks">Delete All</string>


    <string name="new_task_hint">Task Name</string>
    <string name="details_hint">Enter Task Details Here</string>
    <string name="progress_meter_text">% Completed</string>
    <string name="save_task_button">Save Task</string>
    <string name="due_date_button">Set Due Date</string>

    <string name="date_format">"%1$d/%2$d/%3$d"</string>
    <string name="title_activity_update_task">UpdateTaskActivity</string>

    <string name="date_not_set">Not Set</string>
</resources>